dnl $Id$
dnl 
dnl Process this file with autoconf to produce a configure script.
AC_INIT(readiso.c)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(aux)


AC_CANONICAL_HOST
HOST_TYPE=$host
AC_DEFINE_UNQUOTED(HOST_TYPE,"$host")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl check if compiling for supported platform 

case $host in
   *-linux-*)
	echo "You seem to be using Linux..."
	AC_DEFINE(LINUX)
	AC_DEFINE(DEFAULT_DEV,"/dev/sg0")
	ARCHOBJS="scsi_linux.o"
	TARGET_LINUX=yes
        AC_CHECK_HEADERS(scsi/sg.h,,[
          echo "Cannot find <scsi/sg.h> you need it."
          exit 1
         ])
	;;

   *-irix-*)
	echo "You seem to be using Irix..."
	AC_DEFINE(IRIX)
	AC_DEFINE(DEFAULT_DEV,"/dev/scsi/sc0d4l0")
	ARCHOBJS="scsi_irix.c"
	TARGET_SGI=yes
	AC_CHECK_LIB(ds, dsopen, ,[
           echo "Cannot find libds (generic user mode SCSI driver lib)."
           exit 1
          ])
        AC_CHECK_HEADERS(dslib.h,,[
           echo "Cannot find dslib.h  You need libds."
           exit 1
          ])
	LIBS="$LIBS -lfpe -laudio -lcdaudio -laudiofile"
	;;
   *)
	echo "You seem to be using unsupported os..."
	echo "(feel free to add support for your OS :)"
	exit 1
   ;;
esac

AC_SUBST(ARCHOBJS)

dnl Checks for libraries.




dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h string.h)


dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)



dnl Checks for library functions.
AC_CHECK_FUNCS(getopt_long, break, [GNUGETOPT="getopt.o getopt1.o"])
AC_SUBST(GNUGETOPT)





AC_OUTPUT(Makefile)


