dnl $Id$
dnl 
dnl Process this file with autoconf to produce a configure script.
AC_INIT(readiso.c)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(aux)


AC_CANONICAL_HOST
HOST_TYPE=$host
AC_DEFINE_UNQUOTED(HOST_TYPE,"$host")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl check if compiling for supported platform 


case "$host" in

   *-linux-*) 
	echo "You seem to be using Linux..."
	type_target=linux
	;;


   *-sgi-irix*)
	echo "You seem to be using Irix..."
	type_target=irix
	;;


   *)
	echo "You seem to be using unsupported os...$host"
	echo "(feel free to add support for your OS :)"
	exit 1
   ;;

esac



dnl Checks for libraries.



dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h string.h)


dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)



dnl Checks for library functions.
AC_CHECK_FUNCS(getopt_long, break, [GNUGETOPT="getopt.o getopt1.o"])
AC_SUBST(GNUGETOPT)


if test $type_target = irix; then
  AC_DEFINE(IRIX)
  AC_DEFINE(DEFAULT_DEV,"/dev/scsi/sc0d4l0")
  ARCHOBJS="scsi_irix.o"
  AC_CHECK_LIB(ds, dsopen, ,[
           echo "Cannot find libds (generic user mode SCSI driver lib)."
           exit 1
    ])
  AC_CHECK_HEADERS(dslib.h, ,[
           echo "Cannot find <dslib.h>  You need libds headers."
           exit 1
    ])
  LIBS="$LIBS -lfpe -laudio -lcdaudio -laudiofile"
fi

if test $type_target = linux; then
  AC_DEFINE(LINUX)
  AC_DEFINE(DEFAULT_DEV,"/dev/sg0")
  ARCHOBJS="scsi_linux.o"
  AC_CHECK_HEADERS(scsi/sg.h,,[
          echo "Cannot find <scsi/sg.h> you need it."
          exit 1
    ]) 

fi


AC_SUBST(ARCHOBJS)





AC_OUTPUT(Makefile)


